<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:background="@color/cardview_light_background"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/name"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="28sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/image_margin"
                tools:context=".MainActivity">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/avatarimage"
                    android:scaleType="centerCrop"
                    app:border_color="#FF000000"
                    app:border_width="2dp" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/fullname"
            style="@style/NameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_padding"
            android:fontFamily="@font/alegreya_sans"
            android:scaleType="centerCrop"
            android:text="@string/text_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tagline"
            style="@style/NameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alegreya_sans"
            android:paddingTop="0dp"
            android:scaleType="centerCrop"
            android:text="@string/role"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bio_content"
            style="@style/NameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alegreya_sans"
            android:padding="@dimen/padding_text"
            android:paddingTop="0dp"
            android:text="@string/project_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:foregroundGravity="center_horizontal"/>

<!--        <HorizontalScrollView-->
<!--            android:id="@+id/bio_scroll"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="300dp"-->
<!--            android:layout_marginTop="0dp"-->
<!--            android:foregroundGravity="center_horizontal">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardElevation="10dp"-->
<!--                app:cardCornerRadius="20dp"-->
<!--                android:layout_margin="10dp"-->
<!--                app:cardBackgroundColor="@color/white"-->
<!--                app:cardMaxElevation="12dp"-->
<!--                app:cardPreventCornerOverlap="true"-->
<!--                app:cardUseCompatPadding="true"-->
<!--                >-->

<!--                &lt;!&ndash;-->
<!--                In the above cardview widget-->
<!--                cardelevation property will give elevation to your card view-->
<!--                card corner radius will provide radius to your card view-->
<!--                card background color will give background color to your card view-->
<!--                card max elevation will give the cardview maximum elevation-->
<!--                card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.-->
<!--                card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.-->
<!--                below are the two widgets imageview and text view we are displaying inside our card view.-->
<!--                &ndash;&gt;-->
<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="vertical">-->

<!--                <ImageView-->
<!--                    android:layout_width="200dp"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/project1"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:id="@+id/img"-->
<!--                    android:contentDescription="@string/app_name" />-->

<!--                <TextView-->
<!--                    android:layout_width="250dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="bottom|center_horizontal"-->
<!--                    android:paddingHorizontal="16dp"-->
<!--                    android:paddingVertical="12dp"-->
<!--                    android:text="@string/project_1"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textStyle="bold" />-->

<!--                </LinearLayout>-->

<!--            </androidx.cardview.widget.CardView>-->

<!--        </HorizontalScrollView>-->

        <TextView
            android:id="@+id/contact"
            style="@style/NameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alegreya_sans"
            android:padding="@dimen/padding_text"
            android:paddingTop="0dp"
            android:scaleType="centerCrop"
            android:text="@string/contact"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_content"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alegreya_sans"
            android:padding="@dimen/small_padding"
            android:scaleType="centerCrop"
            android:text="@string/bio"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_gravity="center_horizontal"
            android:text="@string/Connect" />
    </LinearLayout>
    </ScrollView>
</layout>

<!--<LinearLayout-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:background="@color/cardview_light_background"-->
<!--android:orientation="horizontal">-->

<!--<androidx.cardview.widget.CardView-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:layout_margin="0dp"-->
<!--    app:cardBackgroundColor="@color/white"-->
<!--    app:cardCornerRadius="15dp"-->
<!--    app:cardElevation="10dp"-->
<!--    app:cardMaxElevation="12dp"-->
<!--    app:cardPreventCornerOverlap="true"-->
<!--    app:cardUseCompatPadding="true">-->

<!--    <LinearLayout-->
<!--        android:layout_width="210dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            style="@style/NameStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="start"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:fontFamily="@font/alegreya_sans"-->
<!--            android:padding="@dimen/small_padding"-->
<!--            android:paddingTop="0dp"-->
<!--            android:text="@string/project_1"-->
<!--            android:textSize="16sp"-->
<!--            android:textStyle="bold" />-->

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp">-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:fontFamily="@font/alegreya_sans"-->
<!--                android:padding="@dimen/image_margin"-->
<!--                android:text="@string/project_1_desc"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="14sp" />-->

<!--        </ScrollView>-->

<!--        <Button-->
<!--            android:id="@+id/git_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:padding="12dp"-->
<!--            android:text="@string/git_explore"-->
<!--            android:textSize="12sp" />-->

<!--    </LinearLayout>-->

<!--</androidx.cardview.widget.CardView>-->

<!--<androidx.cardview.widget.CardView-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:layout_margin="0dp"-->
<!--    app:cardBackgroundColor="@color/white"-->
<!--    app:cardCornerRadius="15dp"-->
<!--    app:cardElevation="10dp"-->
<!--    app:cardMaxElevation="12dp"-->
<!--    app:cardPreventCornerOverlap="true"-->
<!--    app:cardUseCompatPadding="true">-->

<!--    <LinearLayout-->
<!--        android:layout_width="210dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            style="@style/NameStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="start"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:fontFamily="@font/alegreya_sans"-->
<!--            android:padding="@dimen/small_padding"-->
<!--            android:paddingTop="0dp"-->
<!--            android:text="@string/project_2"-->
<!--            android:textSize="16sp"-->
<!--            android:textStyle="bold" />-->

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp">-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:fontFamily="@font/alegreya_sans"-->
<!--                android:padding="@dimen/image_margin"-->
<!--                android:text="@string/project_2_desc"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="14sp" />-->

<!--        </ScrollView>-->

<!--        <Button-->
<!--            android:id="@+id/git_button1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:padding="12dp"-->
<!--            android:text="@string/git_explore"-->
<!--            android:textSize="12sp" />-->

<!--    </LinearLayout>-->

<!--</androidx.cardview.widget.CardView>-->

<!--</LinearLayout>-->